# Prototype_sendfd

./: .gitignore  README.md  becnh3keepalive.txt  build_pi.sh  file.txt  file1.txt  file2.txt  test_proto_http.csv  vanilla_4core_single.csv
Eval_perf/: EVALUATION_METHODOLOGY.md  FIXES_SUMMARY.md  Makefile  NEXT_STEPS.md  README_EVALUATION.md  VALIDATION_TROUBLESHOOTING.md  build_all.sh  cleanup.sh  consolidated_results.csv  direct_bench.txt  direct_server  direct_server.c  direct_tls_server  direct_tls_server.c  generate_plots.py  hotpotato_bench.txt  manage_server.sh  nginx.conf  nginx.conf.template  nginx_active.conf  nginx_bench.txt  nginx_upstream.conf  plain_worker  plain_worker.c  proxy_worker  proxy_worker.c  remote_bench.sh  results_hotpotato.csv  results_nginx_direct.csv  results_nginx_proxy.csv  run_benchmarks.sh  run_evaluation.sh  run_evaluation_fixed.sh  simple_test.sh  simple_test_safe.sh  strace.out  tune_system.sh  validate_100_workers.sh
Performance_old/: Makefile  benchmark.py  classic_proxy  classic_proxy.c  common.h  final_plot_generator.py  full_bench_output.txt  gateway  gateway.c  generate_plots.py  nginx_classic.conf  server-cert.pem  server-key.pem  worker_product  worker_product.c  worker_sum  worker_sum.c
benchmarks/: README.md  context.sh  file_bench3-keepalive.txt
benchmarks/macro/MB-3-request-transfer/MB-3-1-tls-migration/: IMPLEMENTATION_SUMMARY.md  Makefile  README.md  client_benchmark  client_benchmark.c  config.h  evaluate.sh  evaluate_wrk_split.sh  gateway  gateway.c  plot_results.py  worker_classic  worker_classic.c  worker_migration_complete  worker_migration_complete.c
benchmarks/micro/MB-1_handshake/: QUICKSTART.md  README.md  evaluate.sh  full_sync_to_pi.sh  mb1_client_remote  mb1_client_remote.c  mb1_handshake.c  mb1_server_pi.c  plot_mb1.py  results_mb1.csv  results_mb1_distributed_20260408_023756.csv  run_benchmark.sh  run_mb1.sh  setup_and_compile.sh
benchmarks/micro/MB-2_read_peek/: QUICKSTART.md  README.md  eval_log.txt  evaluate.sh  full_sync_to_pi.sh  mb2_client_remote.c  mb2_server_pi.c  plot_mb2.py  results_mb2_distributed_20260408_133822.csv  results_mb2_distributed_20260408_140715.csv  results_mb2_final.csv  run_benchmark.sh  setup_and_compile.sh
benchmarks/micro/micro-bench-forward-tcp-vs-migration/: README.md
benchmarks/micro/micro-bench-forward-tcp-vs-migration/client/: plot_alpha_pair_figures.py  plot_compare_mean_p99.py  plot_compare_mean_with_decrypt.py  run_combined_sweep.py  simple_test.py
benchmarks/micro/micro-bench-forward-tcp-vs-migration/common/: bench2_payload.h
benchmarks/micro/micro-bench-forward-tcp-vs-migration/proto_gateway/: Dockerfile
benchmarks/micro/micro-bench-forward-tcp-vs-migration/proto_worker/: Dockerfile  bench2_proto_worker.c  stack.yml
benchmarks/micro/micro-bench-forward-tcp-vs-migration/results/: combined_proto_uniform.csv  combined_vanilla.csv  combined_vanilla_uniform.csv
benchmarks/micro/micro-bench-forward-tcp-vs-migration/scripts/: build_deploy_proto_gw.sh  build_push_deploy_proto_worker.sh  build_push_deploy_vanilla_function.sh  pi_enable_proto_gw.sh  prepare_proto_stack.sh  (+3 more)
benchmarks/micro/micro-bench-max-throughput/: README.md  RUN_INSTRUCTIONS.md
benchmarks/micro/micro-bench-max-throughput-http/: README.md
benchmarks/micro/micro-bench-tls-decryption-cost/: .gitignore  Makefile  README.md  bench_tls_decrypt_memio.c  plot_decrypt_summary.py  run_on_pi.sh
benchmarks/micro/micro-bench-wolfssl-vs-caddy/: README.md
benchmarks/micro/micro-bench1-initale-time/: README.md
benchmarks/micro/micro-bench2-initale-time/: README.md
benchmarks/micro/micro-bench2-keepalive/: README.md
benchmarks/micro/micro-bench3-keepalive/: README.md
faad_optimization-Romero_New/: Makefile  README.md  benchmark.py  classic_proxy  classic_proxy.c  common.h  gateway  gateway.c  generate_plots.py  server-cert.pem  server-key.pem  setup_worlfssl.sh  worker.c  worker_product  worker_product.c  worker_sum  worker_sum.c
libtlspeek/: CMakeLists.txt  README.md
libtlspeek/certs/: ca.crt  ca.key  generate_certs.sh  server.crt  server.key
libtlspeek/common/: sendfd.c  sendfd.h  tlspeek_log.h  unix_socket.c  unix_socket.h
libtlspeek/gateway/: gateway.c  router.c  router.h
libtlspeek/lib/: tlspeek.c  tlspeek.h  tlspeek_crypto.c  tlspeek_crypto.h  tlspeek_serial.c  tlspeek_serial.h
libtlspeek/test/: test_pipeline.sh  test_tlspeek.c
libtlspeek/worker/: handler.c  handler.h  worker.c
prototype/faasd_tlsmigrate/function/: stack.yml
prototype/faasd_tlsmigrate/gateway/: Dockerfile
prototype/faasd_tlsmigrate/provider/: build_faasd_arm64.sh  pi_install_proto_provider.sh  pi_restore_vanilla_provider.sh
prototype/faasd_tlsmigrate/scripts/: build_copy_enable_proto_gateway.sh  pi_enable_proto_gateway.sh  pi_restore_vanilla_gateway.sh
prototype/faasd_tlsmigrate_keepalive/common/: tlsmigrate_keepalive.h
prototype/faasd_tlsmigrate_keepalive/function/: stack.yml
prototype/faasd_tlsmigrate_keepalive/gateway/: Dockerfile
prototype/faasd_tlsmigrate_keepalive/scripts/: build_copy_enable_proto_keepalive_gateway.sh  pi_enable_proto_keepalive_gateway.sh  pi_restore_vanilla_gateway.sh
(+373 files in other folders)
